# netPLCUtils

./: CMakeLists.txt
libmodbus_src/: CMakeLists.txt
libmodbus_src/cmake/: GenVersion.cmake
matiec_src/config/: config.h
runtime/core/: CMakeLists.txt
runtime/integration_test/: CMakeLists.txt
st_optimizer_src/: CMakeLists.txt
